plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'beauty'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// Web
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// Security + OAuth2
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly    'io.jsonwebtoken:jjwt-jackson:0.12.6'

	// JPA + MySQL + Spatial
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.hibernate.orm:hibernate-spatial'
	runtimeOnly    'com.mysql:mysql-connector-j'

	// WebSocket (채팅)
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-cache'

	// Mail (네이버 SMTP)
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	// Lombok
	compileOnly    'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// Monitoring (Actuator + Prometheus)
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'io.micrometer:micrometer-registry-prometheus'

	// .env 파일 자동 로드 (프로젝트 루트의 .env → Spring 환경변수로 주입)
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// Test
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'com.h2database:h2'
	testImplementation 'org.orbisgis:h2gis:2.2.3'         // H2 + Spatial(POINT) 타입 지원
	testImplementation 'org.awaitility:awaitility:4.2.2'  // 비동기 테스트용
	testRuntimeOnly    'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
}

// spring-dotenv가 Spring Boot 4.x에서 동작하지 않아 Gradle에서 직접 .env 로드
bootRun {
	if (file('.env').exists()) {
		file('.env').readLines().each { line ->
			def trimmed = line.trim()
			if (trimmed && !trimmed.startsWith('#') && trimmed.contains('=')) {
				def idx = trimmed.indexOf('=')
				def key = trimmed.substring(0, idx).trim()
				def val = trimmed.substring(idx + 1).trim()
				if (key) { environment key, val }
			}
		}
	}
}

